# WrapITK-old

./: CMakeLists.txt  CMakeUtilityFunctions.cmake  ConfigureWrapping.cmake  CreateCableSwigInputs.cmake  CreateLanguageSupport.cmake  CreateWrapperLibrary.cmake  FindWrapITK.cmake.in  README  Removed macros.txt  SwigInc.txt.in  TODO.txt  UseWrapITK.cmake.in  WrapBasicTypes.cmake  WrapITK.cmake  WrapITK.spec  WrapITKConfig.cmake.in  WrapITKLang.cmake  WrapITKTypes.cmake  WrapTypeBase.cmake  WrapTypePrefix.cmake  doxygen.config  filterCoverage.py  itk.swg  itkConfigWrapping.cmake  returnedTypeCoverage.py  wrap_.cxx.in  wrap_ITK.cxx.in  wrap_ITKLang.cxx.in  wrapitk.spec
ExternalProjects/ItkVtk/: CMakeLists.txt  itkvtk.spec
ExternalProjects/PyBuffer/: CMakeLists.txt  FindNUMARRAY.cmake  itkPyBuffer.h  itkPyBuffer.txx  wrap_itkPyBuffer.cmake
ExternalProjects/itkvtk/: CMakeLists.txt
IO/: CMakeLists.txt  wrap_IOBase.cmake  wrap_ITKIO.cxx  wrap_ITKIO.cxx.bak  wrap_ITKIOBase.cmake  wrap_itkImageFileReader.cmake  wrap_itkImageFileReader_2D.cmake  wrap_itkImageFileReader_3D.cmake  wrap_itkImageFileWriter.cmake  wrap_itkImageFileWriter_2D.cmake  wrap_itkImageFileWriter_3D.cmake  wrap_itkImageSeriesReader.cmake  wrap_itkImageSeriesWriter.cmake  wrap_itkTkImageViewer2D.cmake.notwrapped
Java/CWD/: CMakeLists.txt
Modules/: CMakeLists.txt
Modules/BSpline/: wrap_itkBSplineInterpolateImageFunction.cmake
Modules/Base/: CMakeLists.txt  wrap_ITKCommonBase.cmake  wrap_itkDefaultStaticMeshTraits.cmake  wrap_itkDifferenceImageFilter.cmake  wrap_itkImageBoundaryCondition.cmake  wrap_itkImageToImageFilter.cmake  wrap_itkInPlaceImageFilter.cmake  wrap_itkMesh.cmake  wrap_itkNarrowBandImageFilterBase.cmake  wrap_itkOptimizer.cmake  wrap_itkPointSet.cmake  wrap_itkResampleImageFilter.cmake  wrap_itkVector.cmake
Modules/BaseNumerics/: CMakeLists.txt
Modules/BaseSpatialObject/: CMakeLists.txt
Modules/BaseTransforms/: CMakeLists.txt
Modules/BasicFilters/: wrap_itkFlipImageFilter.cmake  wrap_itkInterpolateImageFilter.cmake  wrap_itkVTKImageImport.cmake
Modules/BinaryMorphology/: CMakeLists.txt  wrap_itkBinaryThinningImageFilter.cmake  wrap_itkBinaryThresholdImageFilter.cmake
Modules/Calculators/: CMakeLists.txt  wrap_itkLabelStatisticsImageFilter.cmake
Modules/Compose/: CMakeLists.txt  wrap_itkCompose2DCovariantVectorImageFilter.cmake.notwrapped  wrap_itkCompose2DVectorImageFilter.cmake.notwrapped  wrap_itkCompose3DCovariantVectorImageFilter.cmake.notwrapped  wrap_itkCompose3DVectorImageFilter.cmake.notwrapped  wrap_itkPasteImageFilter.cmake  wrap_itkTileImageFilter.cmake
Modules/DeformableTransforms/: CMakeLists.txt
Modules/Denoising/: CMakeLists.txt  wrap_itkBilateralImageFilter.cmake  wrap_itkVotingBinaryHoleFillingImageFilter.cmake  wrap_itkVotingBinaryIterativeHoleFillingImageFilter.cmake
Modules/DistanceMap/: CMakeLists.txt  wrap_itkApproximateSignedDistanceMapImageFilter.cmake
Modules/EdgesAndContours/: CMakeLists.txt  wrap_itkCannyEdgeDetectionImageFilter.cmake  wrap_itkSimpleContourExtractorImageFilter.cmake
Modules/FFT/: CMakeLists.txt
Modules/Filtering/: CMakeLists.txt  wrap_itkDiscreteGaussianImageFilter.cmake  wrap_itkGradientImageFilter.cmake  wrap_itkGradientMagnitudeImageFilter.cmake  wrap_itkGradientMagnitudeRecursiveGaussianImageFilter.cmake  wrap_itkGradientRecursiveGaussianImageFilter.cmake  wrap_itkGradientRecursiveGaussianImageFilter.cmake.notwrapped  wrap_itkLaplacianSharpeningImageFilter.cmake  wrap_itkSmoothingRecursiveGaussianImageFilter.cmake
Modules/IO/: CMakeLists.txt  wrap_ITKIOBase.cmake
Modules/ITKAlgorithms/: CMakeLists.txt  wrap_itkBinaryMinMaxCurvatureFlowImageFilter.cmake  wrap_itkCannySegmentationLevelSetImageFilter.cmake.notwrapped  wrap_itkCurvatureFlowImageFilter.cmake  wrap_itkCurvesLevelSetImageFilter.cmake.notwrapped  wrap_itkImageToImageMetric.cmake  wrap_itkLaplacianSegmentationLevelSetImageFilter.cmake.notwrapped  wrap_itkMutualInformationImageToImageMetric.cmake  wrap_itkNormalizedCorrelationImageToImageMetric.cmake
Modules/ITKBasicFiltersA/: CMakeLists.txt  wrap_itkBinaryErodeImageFilter.cmake  wrap_itkBinaryPruningImageFilter.cmake  wrap_itkCropImageFilter.cmake  wrap_itkDilateObjectMorphologyImageFilter.cmake  wrap_itkErodeObjectMorphologyImageFilter.cmake  wrap_itkGrayscaleConnectedClosingImageFilter.cmake  wrap_itkGrayscaleFunctionErodeImageFilter.cmake  wrap_itkGrayscaleMorphologicalOpeningImageFilter.cmake  wrap_itkIsolatedConnectedImageFilter.cmake  wrap_itkMinimumMaximumImageCalculator.cmake  wrap_itkSqrtImageFilter.cmake  wrap_itkSquareImageFilter.cmake  wrap_itkSubtractImageFilter.cmake
Modules/ITKBasicFiltersB/: wrap_itkExpNegativeImageFilter.cmake  wrap_itkGradientMagnitudeRecursiveGaussianImageFilter.cmake  wrap_itkIntensityWindowingImageFilter.cmake  wrap_itkMinimumMaximumImageFilter.cmake  wrap_itkOrientImageFilter.cmake  wrap_itkParallelSparseFieldLevelSetImageFilter.cmake  wrap_itkPermuteAxesImageFilter.cmake  wrap_itkRandomImageSource.cmake  wrap_itkStatisticsImageFilter.cmake  wrap_itkThresholdLabelerImageFilter.cmake
Modules/ITKBasicFiltersC/: CMakeLists.txt  wrap_itkAbsImageFilter.cmake  wrap_itkAcosImageFilter.cmake  wrap_itkAndImageFilter.cmake  wrap_itkBSplineDownsampleImageFilter.cmake  wrap_itkModulusImageFilter.cmake  wrap_itkMorphologicalGradientImageFilter.cmake  wrap_itkOpeningByReconstructionImageFilter.cmake  wrap_itkReconstructionByDilationImageFilter.cmake  wrap_itkSimilarityIndexImageFilter.cmake  wrap_itkTernaryMagnitudeSquaredImageFilter.cmake
Modules/ITKCommonA/: CMakeLists.txt  wrap_ITKInterpolators.cmake  wrap_itkBinaryBallStructuringElement.cmake  wrap_itkInPlaceImageFilter.cmake
Modules/ITKIO/: CMakeLists.txt  wrap_ITKIOBase.cmake
Modules/ITKNumerics/: CMakeLists.txt
Modules/ITKSpatialObject/: CMakeLists.txt
Modules/IntensityFilters/: CMakeLists.txt  wrap_itkMaskImageFilter.cmake  (+1 more)
SwigRuntime/: CMakeLists.txt
Tcl/: CMakeLists.txt  CreateLanguageSupport.cmake  itkTclAppInit.cxx  itkTclConfigure.h.in  itkTclModules.h.in  itkwish.in  pkgIndex.tcl.in
(+600 files in other folders)
